# promise

./: .gitignore  CMakeLists.txt  cancellable.h  closure.h  current_value_subject.h  empty.h  group.h  promise.h  publisher.h  queue.h  stream.h  subject.h  subscription.h
concrete/: bag.h  empty.h  future.h  generic.h  group.h  map.h  sequence.h  subject.h  subscription_observer.h  switch.h
dispatch/: invocation.h  run_loop.h  task.h
internal/: bag.h  closure.h  subscription.h  switch.h
pipeline/: after.h  future.h  just.h  link.h  listen.h  map.h  queue.h  redirect.h  run.h  start_with.h  subscription_observer.h  switch.h
